; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/fb/extr_nv10.c_nv10_fb_tile_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/fb/extr_nv10.c_nv10_fb_tile_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_fb = type { i32 }
%struct.nouveau_fb_tile = type { i32, i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nv10_fb_tile_init(%struct.nouveau_fb* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, %struct.nouveau_fb_tile* %6) #0 {
  %8 = alloca %struct.nouveau_fb*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.nouveau_fb_tile*, align 8
  store %struct.nouveau_fb* %0, %struct.nouveau_fb** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store %struct.nouveau_fb_tile* %6, %struct.nouveau_fb_tile** %14, align 8
  %15 = load i32, i32* %10, align 4
  %16 = or i32 -2147483648, %15
  %17 = load %struct.nouveau_fb_tile*, %struct.nouveau_fb_tile** %14, align 8
  %18 = getelementptr inbounds %struct.nouveau_fb_tile, %struct.nouveau_fb_tile* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 8
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* %11, align 4
  %21 = add nsw i32 %19, %20
  %22 = call i64 @max(i32 1, i32 %21)
  %23 = sub nsw i64 %22, 1
  %24 = load %struct.nouveau_fb_tile*, %struct.nouveau_fb_tile** %14, align 8
  %25 = getelementptr inbounds %struct.nouveau_fb_tile, %struct.nouveau_fb_tile* %24, i32 0, i32 2
  store i64 %23, i64* %25, align 8
  %26 = load i32, i32* %12, align 4
  %27 = load %struct.nouveau_fb_tile*, %struct.nouveau_fb_tile** %14, align 8
  %28 = getelementptr inbounds %struct.nouveau_fb_tile, %struct.nouveau_fb_tile* %27, i32 0, i32 1
  store i32 %26, i32* %28, align 4
  ret void
}

declare dso_local i64 @max(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
